# Transformer-Attention-Hooker

./: .gitignore  LICENSE  README.md  demo_viz.py  pyproject.toml  test_edge_cases.py  test_practicality.py
.github/workflows/: python-publish.yml
src/transformer_attention_hooker/: __init__.py  model.py  utils.py
